# cosmos

./: .gitignore  .pre-commit-config.yaml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: ci.yaml
src/cosmos/: __init__.py  decorators.py  domain.py  factory.py  message_bus.py  repository.py  unit_of_work.py  utils.py
src/cosmos/contrib/: redis.py
src/cosmos/contrib/pg/: __init__.py  async_uow.py  containers.py  repository.py  transactional_outbox.py  unit_of_work.py
src/cosmos/contrib/tortoise/: __init__.py  consumer.py  tortoise.py
src/microservices/: domain.py  errors.py  events.py  message_bus.py  messages.py  repository.py  unit_of_work.py  utils.py
src/microservices/contrib/: event_stream.py  fastapi.py  redis.py  tortoise.py
src/microservices/contrib/pg/: async_uow.py
src/microservices/contrib/tortoise/: __init__.py  consumer.py  models.py  subscription.py  tortoise.py
src/microservices/tortoise/: mixins.py  models.py
tests/: conftest.py  test_abstract_unit_of_work.py
tests/unit/: test_async_repository.py  test_async_uow_factory.py  test_consumer.py  test_domain.py  test_event.py  test_message.py  test_message_bus.py
