[metadata]
name = microservices
version = 0.0.1
author = proaktiv.io
email = proaktivsolutions.io@gmail.com
description = Patterns for building distributed microservices
long_description = file: README.md
url = https://github.com/proaktivio/microservices

[options]
package_dir =
= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
