[metadata]
name = cosmos
version = 0.0.1
author = bgswe
email = bg.soft.eng@gmail.com
description = Patterns for building distributed microservices
long_description = file: README.md
url = https://github.com/bgswe/cosmos

[options]
package_dir =
= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
